Kubernetes/Services/Kafka/SchemaRegistry/deployment.yaml
# https://oneuptime.com/blog/post/2026-02-09-confluent-platform-schema-ksqldb/view#deploying-schema-registry

apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      volumes:
        - name: kafka-ssl-certs
          secret:
            secretName: dev-cluster-cluster-ca-cert
      containers:
      - name: schema-registry
        image: confluentinc/cp-schema-registry:7.2.0
        ports:
        - containerPort: 8081
        volumeMounts: # <- Mount volume with container (2)
          - name: kafka-ssl-certs
            mountPath: /etc/schema-registry/secrets
            readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "32m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /subjects
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-service
  namespace: kafka
spec:
  type: ClusterIP
  ports:
  - port: 8081
    name: http
  selector:
    app: schema-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schema-registry
  namespace: kafka
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: schema-registry.kafka.homelab.kbushby.com
    cert-manager.io/secret-name: schema-registry-tls
    external-dns.alpha.kubernetes.io/hostname: schema-registry.kafka.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: schema-registry.kafka.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: schema-registry-service
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - schema-registry.kafka.homelab.kbushby.com
    secretName: schema-registry-tls
